cabal-version:      3.0
name:               dashbored
version:            0.1.0.0

executable dashbored
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -Wall -threaded
    other-modules:    CpuInfo BlockText NetMonitor
    build-depends:    base ^>= 4.15.1.0
                    , semialign ^>= 1.2
                    , matrix ^>= 0.3
                    , criterion ^>= 1.5
                    , attoparsec ^>= 0.14
                    , bytestring ^>= 0.10
                    , brick ^>= 0.68
                    , vty ^>= 5.33
                    , time ^>= 1.9
                    , containers ^>= 0.6
                    , optics ^>= 0.4.1
                    , optics-th ^>= 0.4.1
                    , brick-bel ^>= 0.1.0.0